Added container resources
cpu: 1
mem: 1Gi

--- a/nginx/nginx-ingress-dep.yaml
+++ b/nginx/nginx-ingress-dep.yaml
@@ -31,5 +31,9 @@ spec:
           hostPort: 8001
         - containerPort: 8002
           hostPort: 8002
+        resources:
+          requests:
+            cpu: 1
+            memory: 1Gi
       imagePullSecrets:
       - name: registry-secret
